Fix alignment of nav on sm-md

--- a/src/ui/assets/css/components/partials/MaskHeader.scss
+++ b/src/ui/assets/css/components/partials/MaskHeader.scss
@@ -97,7 +97,7 @@ body[class^="scroll"] #subnav .nav-links .mega-menu {
   margin-left: -1.3rem;
 
   > a {
-    @apply text-sm font-semibold leading-9 tracking-wider;
+    @apply text-lg font-semibold leading-9 tracking-wider leading-10;
   }
 }
 
